--- a/cs2.html
+++ b/cs2.html
@@ -13,7 +13,14 @@
         <div class="logo">Playing.uz</div>
         <div class="tagline">CS2 quick connect hub.</div>
       </div>
-      <div class="tagline"><button class="btn secondary" type="button">Log in</button></div>
+      <div class="header-actions">
+  <button class="btn secondary btn-lg" type="button">Log in</button>
+  <a class="btn btn-discord" href="https://discord.gg/yourlink" target="_blank" rel="noopener">
+    <img src="discord_icon.png" alt="Discord" />
+    Discord
+  </a>
+  <div class="header-note">Log in to save favorites. Join Discord for updates.</div>
+</div>
     </div>
     <nav aria-label="Game pages">
       <a href="main.html">Home</a>
@@ -105,33 +112,7 @@
             <button class="btn secondary copy-btn" data-copy="185.22.64.12:27017">Copy IP</button>
             <span class="copied">Copied!</span>
           </div>
-        </article>
-                <article class="card fade-up delay-4">
-          <h3>Aim Lab</h3>
-          <div class="pill">Mode: Aim / 1v1</div>
-          <div class="meta">
-            <div>Players: <strong>9</strong> / 14</div>
-            <div>Connect: <code>steam://connect/185.22.64.12:27017</code></div>
-          </div>
-          <div class="actions">
-            <a class="btn" href="steam://connect/185.22.64.12:27017">Connect</a>
-            <button class="btn secondary copy-btn" data-copy="185.22.64.12:27017">Copy IP</button>
-            <span class="copied">Copied!</span>
-          </div>
-        </article>
-                <article class="card fade-up delay-5">
-          <h3>Aim Lab</h3>
-          <div class="pill">Mode: Aim / 1v1</div>
-          <div class="meta">
-            <div>Players: <strong>9</strong> / 14</div>
-            <div>Connect: <code>steam://connect/185.22.64.12:27017</code></div>
-          </div>
-          <div class="actions">
-            <a class="btn" href="steam://connect/185.22.64.12:27017">Connect</a>
-            <button class="btn secondary copy-btn" data-copy="185.22.64.12:27017">Copy IP</button>
-            <span class="copied">Copied!</span>
-          </div>
-        </article>
+
       </div>
     </section>
   </main>
@@ -167,5 +148,6 @@
   </script>
 </body>
 </html>
+
 
 
