--- a/minecraft.html
+++ b/minecraft.html
@@ -13,7 +13,14 @@
         <div class="logo">Playing.uz</div>
         <div class="tagline">Minecraft quick connect hub.</div>
       </div>
-      <div class="tagline"><button class="btn secondary" type="button">Log in</button></div>
+      <div class="header-actions">
+  <button class="btn secondary btn-lg" type="button">Log in</button>
+  <a class="btn btn-discord" href="https://discord.gg/yourlink" target="_blank" rel="noopener">
+    <img src="discord_icon.png" alt="Discord" />
+    Discord
+  </a>
+  <div class="header-note">Log in to save favorites. Join Discord for updates.</div>
+</div>
     </div>
     <nav aria-label="Game pages">
       <a href="main.html">Home</a>
@@ -128,5 +135,6 @@
   </script>
 </body>
 </html>
+
 
 
